--- a/table.html
+++ b/table.html
@@ -1,11 +1,15 @@
 ---
-layout: default
+layout: page
+title : Raspi
+header : Post Archive
+group: navigation
 ---
+
 <script src="assets/js/list.js"></script>
 
 <div class="container">
 
-    <div class="starter-template row">
+    <div class="starter-template row" style="width:80%">
         <h1>Raspi Gimmicks</h1>
         <p class="lead">Some products for building my project. I'm not related to any of the linked shops and I don't get any money from them :)</p>You can search for it or sort it by clicking on the column header.
     </div>
