--- a/table.html
+++ b/table.html
@@ -1,15 +1,19 @@
 ---
 layout: page
 title : Raspi
-header : Post Archive
+header : Raspi Accessoires
 group: navigation
 ---
+{% include JB/setup %}
 
+<!--
+    javascript for interacting with the table
+!-->
 <script src="assets/js/list.js"></script>
 
-<div class="container">
+<div class="content">
 
-    <div class="starter-template row" style="width:80%">
+    <div >
         <h1>Raspi Gimmicks</h1>
         <p class="lead">Some products for building my project. I'm not related to any of the linked shops and I don't get any money from them :)</p>You can search for it or sort it by clicking on the column header.
     </div>
