--- a/table.html
+++ b/table.html
@@ -15,7 +15,8 @@ group: navigation
 
     <div >
         <h1>Raspi Gimmicks</h1>
-        <p class="lead">Some products for building my project. I'm not related to any of the linked shops and I don't get any money from them :)</p>You can search for it or sort it by clicking on the column header.
+        <p class="lead">Some products for building my project. I'm not related to any of the linked shops and I don't get any money from them :)</p>
+        <p>If you click on the product name you can get my notes and further links for working with it. Furthermore you can search the table or sort it by clicking on the column header.</p>
     </div>
 
 
