--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 layout: page
 title: Place to pee free!
 tagline: ...
+uuid: frontpage
 ---
 {% include JB/setup %}
 
 <!--
     javascript for interacting with the table
 !-->
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="assets/js/list.js"></script>
+<script src="assets/js/keenio.js"></script>
 
 <div class="lead">
 Hey! Welcome to my kind of "techblog" about mostly Raspberry Pi topics and also some technology I find everyday.
