First Commit from client side

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ uuid: frontpage
 <script src="assets/js/keenio.js"></script>
 
 <div class="lead">
-Hey! Welcome to my kind of "techblog" about mostly Raspberry Pi topics and also some technology I find everyday.
+Hey!!! Welcome to my kind of "techblog" about mostly Raspberry Pi topics and also some technology I find everyday.
 Still work in progress and propably ever will be :). Hopefully someone finds something usefull...
 </div>
 <hr>
