--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ Still work in progress and propably ever will be :). Hopefully someone finds som
 <hr>
 <div id="entry-list">
 
-    <div class="row" style="margin-bottom:10px;margin-left:0px;">
+    <div class="" style="">
         <input type="text" class="search form-control" placeholder="Search" />
     </div>
 
-    <div class="row" style="margin-left:0px;">
+    <div class= style="">
         <table class="table table-striped" style="table-layout: fixed" >
             <thead>
             <tr>
