--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@ Hey!!! Welcome to my kind of "techblog" about mostly Raspberry Pi topics and als
 Still work in progress and propably ever will be :). Hopefully someone finds something usefull...
 </p>
 <hr>
+<div ng-app ng-init="qty=1;cost=2">
+    <b>Invoice:</b>
+    <div>
+        Quantity: <input type="number" ng-model="qty" required >
+    </div>
+    <div>
+        Costs: <input type="number" ng-model="cost" required >
+    </div>
+    <div class="ng-binding">
+        <b>Total:</b> {{ "{{ qty * cost | currency " }}}}
+    </div>
+</div>
+<hr>
 <div id="entry-list">
 
     <div class="" style="">
@@ -43,10 +56,4 @@ Still work in progress and propably ever will be :). Hopefully someone finds som
     </div>
 
 </div>
-<script type="text/javascript">
-    var options = {
-        valueNames: ['date', 'title', 'tags']
-    };
 
-    var entryList = new List('entry-list', options);
-</script>
