--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Hey!!! Welcome to my kind of "techblog" about mostly Raspberry Pi topics and als
 Still work in progress and propably ever will be :). Hopefully someone finds something usefull...
 </p>
 <hr>
-<div ng-app ng-init="qty=1;cost=2">
+<div ng-init="qty=1;cost=2">
     <b>Invoice:</b>
     <div>
         Quantity: <input type="number" ng-model="qty" required >
