--- a/assets/modal.html
+++ b/assets/modal.html
@@ -2,9 +2,9 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h4 class="modal-title">Modal title</h4>
-      </div>
+		<button type="button" class="close" ng-click="cancel()">&times;</button>
+		<h4 class="modal-title">Modal title</h4>
+	  </div>
     <div class="modal-body">
       <ul>
         <li ng-repeat="item in items">
@@ -13,11 +13,10 @@
       </ul>
       <div>Selected Item: {{selected.item}}</div>
     </div>
-
     <div class="modal-footer">
       <button type="button" class="btn btn-default" ng-click="cancel()">Close</button>
       <button type="button" class="btn btn-primary" ng-click="ok()">Save changes</button>
     </div>
-    </div>
-  </div>
-</div>
+  </div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+</modal>
