--- a/assets/modal.html
+++ b/assets/modal.html
@@ -17,6 +17,6 @@
       <button type="button" class="btn btn-default" ng-click="cancel()">Close</button>
       <button type="button" class="btn btn-primary" ng-click="ok()">Save changes</button>
     </div>
-  </div><!-- /.modal-content -->
-</div><!-- /.modal-dialog -->
-</modal>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
