--- a/assets/modal.html
+++ b/assets/modal.html
@@ -1,4 +1,4 @@
-<div class="modal-dialog">
+<div class="modal-dialog" style="margin:0px">
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" ng-click="cancel()">&times;</button>
