--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ Still work in progress and propably ever will be :). Hopefully someone finds som
 </div>
 <hr>
 <ul class="menu">
-    <li><a href="/view1">view1</a></li>
-    <li><a href="/view2">view2</a></li>
+    <li><a href="#/view1">view1</a></li>
+    <li><a href="#/view2">view2</a></li>
 </ul>
 
 <div ng-controller="ModalDemoCtrl">
