--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Still work in progress and propably ever will be :). Hopefully someone finds som
 
 <div ng-controller="ModalDemoCtrl">
     <button class="btn" ng-click="open()">Open me!</button>
-    <div ng-show="selected">Selection from a modal: {{ selected.item }}</div>
+    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
 </div>
 
 <div ng-view></div>
