--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Still work in progress and propably ever will be :). Hopefully someone finds som
 </ul>
 
 <div ng-controller="ModalDemoCtrl">
-    <button class="btn" ng-click="open()">Open me!</button>
+    <button class="btn btn-default" ng-click="open()">Open me!</button>
     <div ng-show="selected">Selection from a modal: {{ selected }}</div>
 </div>
 
