--- a/assets/modal.html
+++ b/assets/modal.html
@@ -1,20 +1,17 @@
-<div class="modal-dialog" style="margin:0px">
-  <div class="modal-content">
-    <div class="modal-header">
-      <button type="button" class="close" ng-click="cancel()">&times;</button>
-      <h4 class="modal-title">Modal title</h4>
-    </div>
-    <div class="modal-body">
-      <ul>
-        <li ng-repeat="item in items">
-          <a ng-click="selected.item=item">{{item}}</a>
-        </li>
-      </ul>
-      <div>Selected Item: {{selected.item}}</div>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-default" ng-click="cancel()">Close</button>
-      <button type="button" class="btn btn-primary" ng-click="ok()">Save changes</button>
-    </div>
-  </div><!-- /.modal-content -->
-</div><!-- /.modal-dialog -->
+<script type="text/ng-template" id="modal.html">
+	<div class="modal-header">
+		<h3>I'm a modal!</h3>
+	</div>
+	<div class="modal-body">
+		<ul>
+			<li ng-repeat="item in items">
+				<a ng-click="selected.item = item">{{ item }}</a>
+			</li>
+		</ul>
+		Selected: <b>{{ selected.item }}</b>
+	</div>
+	<div class="modal-footer">
+		<button class="btn btn-primary" ng-click="ok()">OK</button>
+		<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+	</div>
+</script>
