--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Still work in progress and propably ever will be :). Hopefully someone finds som
     <li><a href="#/view2">view2</a></li>
 </ul>
 
-<div ng-controller="ModalDemoCtrl">
+<div ngApp="plunker" ng-controller="ModalDemoCtrl">
     <button class="btn btn-default" ng-click="open()">Open me!</button>
     <div ng-show="selected">Selection from a modal: {{ selected }}</div>
 </div>
