--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@ Still work in progress and propably ever will be :). Hopefully someone finds som
 
 </div>
 
-<ul ng:repeat="comment in comments">
-    <li>{{comment.pageTitle}}</li>
-</ul>
+<div ng-controller="CommentsCtrl" ng-model="CommentsModel">
+	<ul ng:repeat="comment in comments">
+		<li>{{comment.pageTitle}}</li>
+	</ul>
+</div>
 
