--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ Still work in progress and propably ever will be :). Hopefully someone finds som
 </div>
 
 <div ng-controller="CommentsCtrl">
-	<ul ng:repeat="comment in comments">
-		<li>{{comment.pageTitle}}</li>
+	<ul>
+		<li ng:repeat="comment in comments">{{comment.pageTitle}}</li>
 	</ul>
 </div>
 
