--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Still work in progress and propably ever will be :). Hopefully someone finds som
 
 <div ng-controller="CommentsCtrl">
 	<ul>
-		<li ng:repeat="comment in comments">{{comment.pageTitle}}</li>
+		<li ng:repeat="comment in comments.entries">{{comment.pageTitle}}</li>
 	</ul>
 </div>
 
