--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Still work in progress and propably ever will be :). Hopefully someone finds som
 
 </div>
 
-<div ng-controller="CommentsCtrl">
+<div ng-controller="CommentsCtrl" ng-model="CommentsCtrl">
 	<ul>
 		<li ng:repeat="comment in comments.entries">{{ "{{ comment.pageTitle "}}}}</li>
 	</ul>
