--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@ uuid: frontpage
 ---
 {% include JB/setup %}
 
-<p class="lead">
-Hey!!! Welcome to my kind of "techblog" about mostly Raspberry Pi topics and also some technology I find everyday.
-Still work in progress and propably ever will be :). Hopefully someone finds something usefull...
+<p class="lead" ng-controller="WikiquoteCtrl">
+    {{ "{{ wikiquote " }}}}
 </p>
 <hr>
 <div id="entry-list">
