--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ uuid: frontpage
 {% include JB/setup %}
 
 <p class="lead" ng-show="wikiquote" ng-controller="WikiquoteCtrl">
-    {{ "{{ wikiquote " }}}}
+    {% raw %} {{ wikiquote }} {% endraw %}
 </p>
 <hr>
 
