--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -8,9 +8,9 @@ comments: false
 
     <div ng-controller="ConfigCtrl">
         <h1>Two Way Data Binding of nested JSON and a Form</h1>
-        <div ng-repeat="(key, value) in inputs track by $index">
+        <div ng-repeat="(key, value) in inputs">
             <h2>&#123;&#123;key&#125;&#125;</h2>
-            <div ng-repeat="(key2, value2) in value track by $index">
+            <div ng-repeat="(key2, value2) in value">
                 &#123;&#123;key2&#125;&#125;: <input placeholder="&#123;&#123;value2&#125;&#125;" ng-model="newValue" ng-change="setOutput(key, key2, newValue)">
             </div>
         </div>
