--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -16,5 +16,7 @@ comments: false
         </div>
         <h1>Inputs</h1>
         <pre ng-bind="inputs | json"></pre>
+		<button class='btn btn-default' ng-click="githubCommit()">Commit to github</button>
     </div>
+
 {% endraw %}
