--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -19,7 +19,7 @@ comments: false
 				</div>
 			</form>
         </div>
-		<button class='btn btn-warning' ng-click="githubCommit()">Commit to github</button>
+		<button class='btn btn-warning pull-right' ng-click="githubCommit()">Commit to github</button>
     </div>
 
 {% endraw %}
