--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -19,7 +19,9 @@ comments: false
 				</div>
 			</form>
         </div>
-		<button class='btn btn-warning pull-right' ng-click="githubCommit()">Commit to github</button>
+		<div class="container">
+			<button class='btn btn-warning pull-right' ng-click="githubCommit()">Commit to GitHub</button>
+		</div>
     </div>
 
 {% endraw %}
