--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -19,7 +19,7 @@ comments: false
 				</div>
 			</form>
         </div>
-		<div class="container">
+		<div class="col-sm-10">
 			<button class='btn btn-warning pull-right' ng-click="githubCommit()">Commit to GitHub</button>
 		</div>
     </div>
