--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -19,7 +19,7 @@ comments: false
 				</div>
 			</form>
         </div>
-		<div class="container col-sm-12" style="margin-top:10px">
+		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
 			<button class='btn btn-warning pull-right' ng-click="githubCommit()">Commit to GitHub</button>
 		</div>
     </div>
