--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -9,7 +9,7 @@ comments: false
     <div ng-controller="ConfigCtrl">
         <h1>Edit Frontend Configuration</h1>
         <div ng-repeat="(key, value) in inputs">
-            <h2>{{key}}</h2>
+            <h2>{{key|uppercase}}</h2>
 			<form class="form-horizontal" role="form">
 				<div clsse="form-group" ng-repeat="(key2, value2) in value">
 					<label for="{{key2}}" class="col-sm-2 control-label">{{key2}}</label>
