--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -10,7 +10,7 @@ comments: false
         <h1>Edit Frontend Configuration</h1>
         <div ng-repeat="(key, value) in inputs">
             <h2>{{key|uppercase}}</h2>
-			<form class="form-horizontal" role="form">
+			<form class="form-horizontal" role="form" style="margin-top:10px">
 				<div clsse="form-group" ng-repeat="(key2, value2) in value">
 					<label for="{{key2}}" class="col-sm-2 control-label">{{key2}}</label>
 					<div class="col-sm-10">
