--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -8,9 +8,9 @@ comments: false
 
     <div ng-controller="ConfigCtrl">
         <h1>Edit Frontend Configuration</h1>
-        <div ng-repeat="(key, value) in inputs">
+        <div ng-repeat="(key, value) in inputs" style="margin-bottom:15px">
             <h2>{{key|uppercase}}</h2>
-			<form class="form-horizontal" role="form" style="margin-top:10px">
+			<form class="form-horizontal" role="form" >
 				<div clsse="form-group" ng-repeat="(key2, value2) in value">
 					<label for="{{key2}}" class="col-sm-2 control-label">{{key2}}</label>
 					<div class="col-sm-10">
