--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -8,7 +8,7 @@ comments: false
 
     <div ng-controller="ConfigCtrl">
         <h1>Edit Frontend Configuration</h1>
-        <div ng-repeat="(key, value) in inputs" style="margin-bottom:15px">
+        <div ng-repeat="(key, value) in inputs" style="margin-top:15px">
             <h2>{{key|uppercase}}</h2>
 			<form class="form-horizontal" role="form" >
 				<div clsse="form-group" ng-repeat="(key2, value2) in value">
