--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -8,10 +8,10 @@ comments: false
 
     <div ng-controller="ConfigCtrl">
         <h1>Edit Frontend Configuration</h1>
-        <div ng-repeat="(key, value) in inputs" style="margin-top:15px">
+        <div ng-repeat="(key, value) in inputs">
             <h2>{{key|uppercase}}</h2>
 			<form class="form-horizontal" role="form" >
-				<div clsse="form-group" ng-repeat="(key2, value2) in value">
+				<div class="form-group" ng-repeat="(key2, value2) in value">
 					<label for="{{key2}}" class="col-sm-2 control-label">{{key2}}</label>
 					<div class="col-sm-10">
 						<input placeholder="{{value2}}" id="{{key2}}" class="form-control" ng-model="newValue" ng-change="setOutput(key, key2, newValue)">
