--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title : Edit Config
-header : Frontend Configuration
+title : Fork...
+header : Create a clone...
 comments: false
 ---
 {% raw %}
