--- a/app/admin/createPost.html
+++ b/app/admin/createPost.html
@@ -8,6 +8,16 @@ comments: false
 
     <div ng-controller="PostCtrl">
         <h1>Add New Content</h1>
+        <div class="row">
+            <div class="col-md-6">
+                <p class="input-group">
+                    <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" max="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+              <span class="input-group-btn">
+                <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+                </p>
+            </div>
+        </div>
     </div>
 
 {% endraw %}
