--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -12,7 +12,7 @@ comments: false
         </div>
 		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
 			
-			<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
+			<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork!</button>
 		
 		</div> 
     </div>
