--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -7,12 +7,12 @@ comments: false
 {% raw %}
 
     <div ng-controller="GithubForkCtrl">
-        <h1>Make a clone for you..</h1>
+        <h1>Make a clone for you...</h1>
         <div>
         </div>
 		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
 			
-			<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork!</button>
+			<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
 		
 		</div> 
     </div>
