--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -8,7 +8,9 @@ comments: false
 
     <div ng-controller="GithubForkCtrl">
         <h1>Make a clone for you!!!</h1>
-        <div>
+        <div class="form-group">
+            <label for="forkName" class="col-md-3 control-label">Name of your blog</label>
+            <input type="text" class="col-md-9 form-control" ng-model="forkName" id="forkName" placeholder="xyz.github.com"/>
         </div>
 		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
 			
