--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -6,7 +6,7 @@ comments: false
 ---
 {% raw %}
 
-    <div ng-controller="GithubForkCtrl">
+    <div ng-controller="GithubForkCtrl" ng-csp>
         <h1>Make a clone for you!!!</h1>
         <div class="form-group">
             <label for="forkName" class="col-md-3 control-label">Name of your blog</label>
