--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -10,11 +10,11 @@ comments: false
         <h1>Make a clone for you!!!</h1>
         <div class="form-group">
             <label for="forkName" class="col-md-3 control-label">Name of your blog</label>
-            <input type="text" class="col-md-9 form-control" ng-model="forkName" id="forkName" placeholder="xyz.github.com"/>
+            <input type="text" class="col-md-9 form-control" ng-model="options.forkName" id="forkName" placeholder="xyz.github.com"/>
         </div>
         <div class="form-group">
             <label for="forkName" class="col-md-3 control-label">Slogn of your site</label>
-            <input type="text" class="col-md-9 form-control" ng-model="forkSlogan" id="forkSlogan" placeholder="Enter your site slogan"/>
+            <input type="text" class="col-md-9 form-control" ng-model="options.forkSlogan" id="forkSlogan" placeholder="Enter your site slogan"/>
         </div>
 		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
 			
