--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -7,7 +7,10 @@ comments: false
 {% raw %}
 
     <div ng-controller="GithubForkCtrl">
-        <h1>Make a clone for you!!!</h1>
+        <h1>Make a clone for you!</h1>
+        <div>Create a copy of this site on your own GitHub account. After the clone is ready you can create/edit your own content. If you dive into you can even customize this page. Try it...</div>
+        <h2>Instructions</h2>
+        <div>Login to this page with your GitHub account. Enter the name of your blog (xyz.github.com) and a page slogan. Click on fork...</div>
         <div class="form-group">
             <label for="forkName" class="col-md-3 control-label">Name of your blog</label>
             <input type="text" class="col-md-9 form-control" ng-model="options.forkName" id="forkName" placeholder="xyz.github.com"/>
