--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -8,7 +8,7 @@ comments: false
 
     <div ng-controller="GithubForkCtrl">
         <h1>Make a clone for you!</h1>
-        <div>Create a copy of this site on your own GitHub account. After the clone is ready you can create/edit your own content. If you dive into you can even customize this page. Try it...</div>
+        <div>Create a copy of this site on your own GitHub account. After the clone is ready you can create/edit your own content on your page. If you dive into you can even customize the page because you have complete control over all sources. Try it...</div>
         <h2>Instructions</h2>
         <div>Login to this page with your GitHub account. Enter the name of your blog (xyz.github.com) and a page slogan. Click on fork...</div>
         <div class="form-group">
