--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -13,7 +13,7 @@ comments: false
         <div>Login to this page with your GitHub account. Enter the name of your blog (xyz.github.com) and a page slogan. Click on fork...</div>
         <div class="form-group">
             <label for="forkName" class="col-md-3 control-label">Name of your blog</label>
-            <input type="text" class="col-md-9 form-control" ng-model="options.forkName" id="forkName" placeholder="xyz.github.com"/>
+            <input type="url" class="col-md-9 form-control" ng-model="options.forkName" id="forkName" placeholder="xyz.github.com"/>
         </div>
         <div class="form-group">
             <label for="forkName" class="col-md-3 control-label">Slogn of your site</label>
