--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -13,17 +13,17 @@ comments: false
         <div>Login to this page with your GitHub account. Enter the name of your blog (xyz.github.com) and a page slogan. Click on fork...</div>
         <div class="form-group">
             <label for="forkName" class="col-md-3 control-label">Name of your blog</label>
-            <input type="url" class="col-md-9 form-control" ng-model="options.forkName" ng-model-options="{ updateOn: 'default blur', debounce: { default: 500, blur: 0 } }" id="forkName" placeholder="xyz.github.com"/>
+            <input type="text" class="col-md-9 form-control" ng-model="options.forkName" ng-model-options="{ debounce: 2000 }" ng-change="checkUnique()" id="forkName" placeholder="xyz.github.com"/>
         </div>
         <div class="form-group">
             <label for="forkName" class="col-md-3 control-label">Slogn of your site</label>
             <input type="text" class="col-md-9 form-control" ng-model="options.forkSlogan" id="forkSlogan" placeholder="Enter your site slogan"/>
         </div>
 		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
-			
+
 			<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
-		
-		</div> 
+
+		</div>
     </div>
 	
 {% endraw %}
