--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -16,7 +16,7 @@ comments: false
             <input type="text" class="col-md-9 form-control" ng-model="options.forkName" ng-model-options="{ debounce: 2000 }" ng-change="checkUnique()" id="forkName" placeholder="xyz.github.com"/>
         </div>
         <div class="form-group">
-            <label for="forkName" class="col-md-3 control-label">Slogan of your site</label>
+            <label for="forkName" class="col-md-3 control-label">Slogn of your site</label>
             <input type="text" class="col-md-9 form-control" ng-model="options.forkSlogan" id="forkSlogan" placeholder="Enter your site slogan"/>
         </div>
 		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
