--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -13,6 +13,7 @@ comments: false
             - request from github content
             - fill markdown editor
 		</div>
+        <textarea id="target-editor" style="display:none;"></textarea>
     </div>
 	
 {% endraw %}
