--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -6,13 +6,8 @@ comments: false
 ---
 {% raw %}
 
-    <div ng-controller="GithubEditCtrl">
+    <div style="padding-bottom:15px" ng-controller="GithubEditCtrl">
         <h1>Edit</h1>
-        <div>
-            - Get url from url
-            - request from github content
-            - fill markdown editor
-		</div>
         <textarea id="target-editor" style="display:none;"></textarea>
     </div>
 	
