--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -8,6 +8,14 @@ comments: false
 
     <div style="padding-bottom:15px" ng-controller="GithubEditCtrl">
         <h1>Edit</h1>
+        <div class="form-group">
+            <label for="date">Date</label>
+            <input type="test" class="form-control" id="date" ng-model="options.date">
+        </div>
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" id="title" ng-model="options.title">
+        </div>
         <textarea id="target-editor" style="display:none;"></textarea>
     </div>
 	
