--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -8,11 +8,16 @@ comments: false
 
     <div style="padding-bottom:15px" ng-controller="GithubEditCtrl">
         <h1>Edit</h1>
-        <div class="form-group">
-            <label for="date">Date</label>
-            <input type="test" class="form-control" id="date" ng-model="options.date">
+        <div class="form-group col-md-6">
+            <p class="input-group">
+                <label for="date">Date</label>
+                <input type="text" class="form-control" ng-model="options.date" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" max="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
+              <span class="input-group-btn">
+                <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </p>
         </div>
-        <div class="form-group">
+        <div class="form-group col-md-6">
             <label for="title">Title</label>
             <input type="text" class="form-control" id="title" ng-model="options.title">
         </div>
