--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -17,7 +17,7 @@ comments: false
               </span>
             </p>
         </div>
-        <div class="fcol-md-6">
+        <div class="col-md-6">
             <label for="title">Title</label>
             <input type="text" class="form-control" id="title" ng-model="options.title">
         </div>
