--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -21,6 +21,7 @@ comments: false
             <label for="title">Title</label>
             <input type="text" class="form-control" id="title" ng-model="options.title">
         </div>
+        <div class="clearfix"></div>
         <textarea id="target-editor" style="display:none;"></textarea>
     </div>
 	
