--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -10,15 +10,13 @@ comments: false
         <h1>Edit</h1>
         <div class="col-md-3">
             <p class="input-group">
-                <label for="date">Date</label>
-              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" max="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
+              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
               <span class="input-group-btn">
                 <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
             </p>
         </div>
         <div class="col-md-6">
-            <label for="title">Title</label>
             <input type="text" class="form-control" id="title" ng-model="options.title">
         </div>
         <div class="clearfix"></div>
