--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -8,13 +8,15 @@ comments: false
 
     <div style="padding-bottom:15px" ng-controller="GithubEditCtrl">
         <h1>Edit</h1>
-        <div class="col-md-4">
-            <p class="input-group">
-              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
-              <span class="input-group-btn">
-                <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-              </span>
-            </p>
+        <div class="row" style="background-color:green;">
+            <div class="col-md-4">
+                <p class="input-group">
+                  <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                  </span>
+                </p>
+            </div>
         </div>
         <div class="col-md-6">
             <input type="text" class="form-control" id="title" ng-model="options.title">
