--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -6,7 +6,7 @@ comments: false
 ---
 {% raw %}
 
-    <div style="padding-bottom:15px" ng-controller="GithubEditCtrl">
+    <div style="padding-bottom:15px" ng-controller="GithubEditCtrl" class="containter">
         <h1>Edit</h1>
         <div class="row" style="background-color:green;">
             <div class="col-md-4">
