--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -12,7 +12,7 @@ comments: false
             <form class="form-inline" role="form">
                 <div class="col-md-6">
                     <p class="input-group">
-                      <label for="date">Password</label>
+                      <label for="date">Date</label>
                       <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
                       <span class="input-group-btn">
                         <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
