--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -12,10 +12,12 @@ comments: false
             <form class="form-inline" role="form">
                 <div class="col-md-6">
                       <label for="date">Date</label>
+                    <span class="input-group">
                       <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
                       <span class="input-group-btn">
                         <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                       </span>
+                    </span>
                 </div>
                 <div class="col-md-6">
                     <input type="text" class="form-control" id="title" ng-model="options.title">
