--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -19,7 +19,9 @@ comments: false
                       </span>
                     </span>
                 </div>
+                <div class="form-group">
                     <input type="text" class="form-control col-md-6" id="title" ng-model="options.title">
+                    </div>xsx
             </form>
         </div>
 
