--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -13,15 +13,16 @@ comments: false
                 <div class="form-group">
                     <span class="input-group">
                       <label for="date" class="col-md-1 control-label">Date</label>
-                      <input type="text" class="form-control col-md-5" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
+                      <input type="text" class="form-control col-md-4" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
                       <span class="input-group-btn">
                         <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                       </span>
                     </span>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control col-md-6" id="title" ng-model="options.title">
-                    </div>xsx
+                    <label for="title" class="col-md-1 control-label">Title</label>
+                    <input type="text" class="form-control col-md-4" id="title" ng-model="options.title">
+                    </div>
             </form>
         </div>
 
