--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -20,8 +20,8 @@ comments: false
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="title" class="col-md-1 control-label">Title</label>
-                    <input type="text" class="form-control col-md-4" id="title" ng-model="options.title">
+                    <label for="title" class="col-md-2 control-label">Title</label>
+                    <input type="text" class=" col-md-4 form-control" id="title" ng-model="options.title">
                  </div>
             </form>
         </div>
