--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -12,8 +12,8 @@ comments: false
             <form class="form-inline" role="form">
                 <div class="form-group col-md-6">
                     <div class="input-group">
-                      <label for="date" class="col-md-2 control-label">Date</label>
-                      <div class="col-md-4">
+                      <label for="date" class="col-sm-2 control-label">Date</label>
+                      <div class="col-sm-10">
                           <input type="text" class="form-control col-md-4" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
                           <span class="input-group-btn">
                             <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
