--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -10,7 +10,7 @@ comments: false
         <h1>Edit</h1>
         <div class="row" style="background-color:green;">
             <form class="form-inline" role="form">
-                <div class="form-group col-md-6">
+                <div class="form-group col-sm-12">
                     <div class="input-group">
                       <label for="date" class="col-sm-2 control-label">Date</label>
                       <div class="col-sm-10">
