--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -14,8 +14,8 @@ comments: false
                     <div class="input-group">
                       <label for="date" class="col-sm-2 control-label">Date</label>
                       <div class="col-sm-10">
-                          <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
-                          <span class="input-group-btn">
+                          <input type="text" class="form-control col-sm-2" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
+                          <span class="input-group-btn col-sm-6">
                             <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                           </span>
                       </div>
