--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -10,15 +10,13 @@ comments: false
         <h1>Edit</h1>
         <div class="row" style="background-color:green;">
             <form class="form-inline" role="form">
-                <div class="form-group col-sm-6">
-                      <label for="date" class="col-sm-2 control-label">Date</label>
-                      <div class="col-sm-10">
-                          <input type="text" class="form-control col-sm-2" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
-                      </div>
-                </div>
                 <div class="form-group col-md-6">
-                    <label for="title" class="col-md-2 control-label">Title</label>
-                    <input type="text" class=" col-md-4 form-control" id="title" ng-model="options.title">
+                      <label for="date" class="control-label">Date</label>
+                      <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
+                </div>
+                <div class="form-group col-md-6 ">
+                    <label for="title" class="control-label">Title</label>
+                    <input type="text" class="form-control" id="title" ng-model="options.title">
                  </div>
             </form>
         </div>
