--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -9,12 +9,12 @@ comments: false
     <div style="padding-bottom:15px" ng-controller="GithubEditCtrl" class="containter">
         <h1>Edit</h1>
         <div class="row" style="background-color:green;">
-            <form class="form-inline" role="form">
+            <form class="form-horizontal" role="form">
                 <div class="form-group col-md-6">
                       <label for="date" class="control-label">Date</label>
                       <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
                 </div>
-                <div class="form-group col-md-6 ">
+                <div class="form-group col-md-6">
                     <label for="title" class="control-label">Title</label>
                     <input type="text" class="form-control" id="title" ng-model="options.title">
                  </div>
