--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -8,7 +8,7 @@ comments: false
 
     <div style="padding-bottom:15px" ng-controller="GithubEditCtrl" class="containter">
         <h1>Edit</h1>
-        <div class="row" style="background-color:green;">
+        <div>
             <form class="form-horizontal" role="form">
                 <div class="form-group col-md-6">
                       <label for="date" class="control-label">Date</label>
