--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -7,7 +7,10 @@ comments: false
 {% raw %}
 
     <div style="padding-bottom:15px" ng-controller="GithubEditCtrl" class="containter">
-        <div style="text-align:right"><a href="?path={{page.path}}&url={{page.url}}" class="btn btn-danger btn-middle">Delete <i class="icon-white icon-pencil"></i></a></div>
+        <div style="text-align:right">
+            <button type="button" class="btn btn-danger btn-middle" ng-click="delete">
+                Delete
+            </button>
         <h1>Edit</h1>
         <div>
             <form class="form-horizontal" role="form">
