--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -11,6 +11,7 @@ comments: false
             <button type="button" class="btn btn-danger btn-middle" ng-click="delete">
                 Delete
             </button>
+        </div>
         <h1>Edit</h1>
         <div>
             <form class="form-horizontal" role="form">
