--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -8,7 +8,7 @@ comments: false
 
     <div style="padding-bottom:15px" ng-controller="GithubEditCtrl" class="containter">
         <div style="text-align:right">
-            <button type="button" class="btn btn-danger btn-middle" ng-click="delete">
+            <button type="button" class="btn btn-danger btn-middle" ng-click="delete()">
                 Delete
             </button>
         </div>
