--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -7,12 +7,13 @@ comments: false
 {% raw %}
 
     <div style="padding-bottom:15px" ng-controller="GithubEditCtrl" class="containter">
-        <div style="text-align:right">
-            <button type="button" class="btn btn-danger btn-middle" ng-click="delete()">
-                Delete
-            </button>
+        <div style="margin-top: 0px" class="page-header">
+            <h1 style="float:left">Edit</small></h1>
+            <div style="padding-top:25px;text-align:right">
+                <button type="button" class="btn btn-danger btn-middle" ng-click="delete()">Delete</button>
+            </div>
+            <div style="clear:both;"></div>
         </div>
-        <h1>Edit</h1>
         <div>
             <form class="form-horizontal" role="form">
                 <div class="form-group col-md-5">
