--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -18,7 +18,7 @@ comments: false
             <form class="form-horizontal" role="form">
                 <div class="form-group col-md-5">
                       <label for="date" class="control-label">Date</label>
-                      <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
+                      <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
                 </div>
                 <div class="form-group col-md-8">
                     <label for="title" class="control-label">Title</label>
