--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -22,7 +22,7 @@ comments: false
                 </div>
                 <div class="form-group col-md-8">
                     <label for="title" class="control-label">Title</label>
-                    <input type="text" class="form-control" id="title" ng-model="options.title">
+                    <input type="text" class="form-control" id="title" ng-model="options.title" required>
                  </div>
             </form>
         </div>
