--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title : Edit...
-header : Edit / Create Content...
+title : Fork...
+header : Create a clone...
 comments: false
 ---
 {% raw %}
@@ -18,11 +18,11 @@ comments: false
             <form class="form-horizontal" role="form">
                 <div class="form-group col-md-5">
                       <label for="date" class="control-label">Date</label>
-                      <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
+                      <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
                 </div>
                 <div class="form-group col-md-8">
                     <label for="title" class="control-label">Title</label>
-                    <input type="text" class="form-control" id="title" ng-model="options.title" required>
+                    <input type="text" class="form-control" id="title" ng-model="options.title">
                  </div>
             </form>
         </div>
