--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title : Fork...
-header : Create a clone...
+title : Edit / Create / Delecte Content ...
+header : 
 comments: false
 ---
 {% raw %}
