--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -8,7 +8,7 @@ comments: false
 
     <div ng-controller="ConfigCtrl">
         <h1>Edit Frontend Configuration</h1>
-        <div>{{inputs.config}}</div>
+        <div>{{inputs | JSON}}</div>
         <div ng-repeat="(key, value) in inputs">
             <h2>{{key|uppercase}}</h2>
 			<form class="form-horizontal" role="form" >
