--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -20,7 +20,7 @@ comments: false
             <input type="text" class="col-md-9 form-control" ng-model="options.forkSlogan" id="forkSlogan" placeholder="Enter your site slogan"/>
         </div>
         <div class="form-group">
-            <label for="realName" class="col-md-3 control-label">Name/label>
+            <label for="realName" class="col-md-3 control-label">Name</label>
             <input type="text" class="col-md-9 form-control" ng-model="options.forkRealName" id="realName" placeholder="Enter your name"/>
         </div>
         <div class="form-group">
@@ -32,7 +32,6 @@ comments: false
             <input type="text" class="col-md-9 form-control" ng-model="options.forkMail" id="ssl" placeholder="Enforce SSL"/>
         </div>
 		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
-
 			<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
 
 		</div>
