--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -16,7 +16,7 @@ comments: false
             <input type="text" class="col-md-9 form-control" ng-model="options.forkName" ng-model-options="{ debounce: 2000 }" ng-change="checkUnique()" id="forkName" placeholder="xyz.github.com"/>
         </div>
         <div class="form-group">
-            <label for="forkName" class="col-md-3 control-label">Slogan of your site</label>
+            <label for="forkSlogan" class="col-md-3 control-label">Slogan of your site</label>
             <input type="text" class="col-md-9 form-control" ng-model="options.forkSlogan" id="forkSlogan" placeholder="Enter your site slogan"/>
         </div>
         <div class="form-group">
@@ -25,11 +25,11 @@ comments: false
         </div>
         <div class="form-group">
             <label for="twitter" class="col-md-3 control-label">Twitter</label>
-            <input type="text" class="col-md-9 form-control" ng-model="options.forkMail" id="twitter" placeholder="Your twitter account"/>
+            <input type="text" class="col-md-9 form-control" ng-model="options.twitter" id="twitter" placeholder="Your twitter account"/>
         </div>
         <div class="form-group">
             <label for="ssl" class="col-md-3 control-label">SSL</label>
-            <input type="text" class="col-md-9 form-control" ng-model="options.forkMail" id="ssl" placeholder="Enforce SSL"/>
+            <input type="text" class="col-md-9 form-control" ng-model="options.ssl" id="ssl" placeholder="Enforce SSL"/>
         </div>
 		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
 			<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
