--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -20,7 +20,7 @@ comments: false
             <input type="text" class="col-md-9 form-control" ng-model="options.forkSlogan" id="forkSlogan" placeholder="Enter your site slogan"/>
         </div>
         <div class="form-group">
-            <label for="realName" class="col-md-3 control-label">Name</label>
+            <label for="realName" class="col-md-3 control-label">Your Name - if you don't like to use your real name, use your GitHub name...</label>
             <input type="text" class="col-md-9 form-control" ng-model="options.forkRealName" id="realName" placeholder="Enter your name"/>
         </div>
         <div class="form-group">
