--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -12,7 +12,7 @@ comments: false
         <h2>Instructions</h2>
         <div>Login to this page with your GitHub account. Enter the name of your blog (xyz.github.com) and a page slogan. Click on fork...</div>
         <div class="form-group">
-            <label for="forkName" class="col-md-3 control-label">Name of your blog</label>
+            <label for="forkName" class="col-md-3 control-label">Address of your blog (please check if it is available)</label>
             <input type="text" class="col-md-9 form-control" ng-model="options.forkName" ng-model-options="{ debounce: 2000 }" ng-change="checkUnique()" id="forkName" placeholder="xyz.github.com"/>
         </div>
         <div class="form-group">
