--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -27,6 +27,10 @@ comments: false
             <label for="twitter" class="col-md-3 control-label">Twitter</label>
             <input type="text" class="col-md-9 form-control" ng-model="options.twitter" id="twitter" placeholder="Your twitter account"/>
         </div>
+        <div class="form-group">
+            <label for="theme" class="col-md-3 control-label">Theme</label>
+            <input type="text" class="col-md-9 form-control" ng-model="options.theme" id="theme" placeholder="Your twitter account"/>
+        </div>
 		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
 			<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
 
