--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -29,7 +29,7 @@ comments: false
         </div>
         <div class="form-group">
             <label for="theme" class="col-md-3 control-label">Theme</label>
-			<select ng-model="options.theme" ng-options="c.name for c in options.theme">
+			<select ng-model="options.theme" ng-options="c.name for c in options.theme" id="theme">
 				<option value="">Theme</option>
 			</select>
         </div>
